<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MapsActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/button_open_header"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_dehaze_black"
            android:tint="#000" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/button_open_header"
            android:layout_marginTop="8dp"
            android:layout_centerInParent="true">
            <fragment
                android:id="@+id/map"
                class="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:elevation="10dp"
                android:background="@drawable/black_border"
                android:id="@+id/relLayout">
                <ImageView
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:id="@+id/ic_magnify"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:src="@drawable/ic_magnify"/>
                <AutoCompleteTextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_toRightOf="@+id/ic_magnify"
                    android:layout_centerVertical="true"
                    android:textSize="15sp"
                    android:textColor="#000"
                    android:id="@+id/input_search"
                    android:background="@null"
                    android:hint="@string/search"
                    android:imeOptions="actionSearch"/>
            </RelativeLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:elevation="10dp"
                android:background="@color/white"
                android:visibility="invisible"
                android:weightSum="7"
                android:orientation="horizontal"
                android:id="@+id/liLayout">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="5"
                    android:id="@+id/diem_den"
                    android:background="@drawable/black_border"
                    android:gravity="center_vertical"
                    />
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:id="@+id/gia"
                    android:background="@drawable/black_border"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:id="@+id/distance"
                    android:background="@drawable/black_border"/>

            </LinearLayout>
            <Button
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_alignParentBottom="true"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:text="@string/findDriver"
                android:layout_marginBottom="10dp"
                android:textColor="@color/white"
                android:background="@drawable/shapelogin"
                android:shadowColor="@android:color/transparent"
                android:id="@+id/find_driver"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_alignParentBottom="true"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:text="@string/Cancel"
                android:layout_marginBottom="10dp"
                android:textColor="@color/white"
                android:background="@drawable/shapelogin"
                android:shadowColor="@android:color/transparent"
                android:id="@+id/cancel_trip"
                android:visibility="invisible"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_alignParentBottom="true"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:text="@string/moving"
                android:layout_marginBottom="10dp"
                android:textColor="@color/white"
                android:background="@drawable/shapelogin"
                android:shadowColor="@android:color/transparent"
                android:id="@+id/on_trip"
                android:visibility="invisible"/>
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/find_driver"
                android:layout_alignRight="@+id/find_driver"
                android:src="@drawable/ic_gps"
                android:id="@+id/gps"/>
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/gps"
                android:layout_alignRight="@+id/gps"
                android:src="@drawable/ic_phone"
                android:visibility="invisible"
                android:id="@+id/partner"/>
        </RelativeLayout>
    </RelativeLayout>
    <android.support.design.widget.NavigationView
        app:menu="@menu/main_menu"
        android:id="@+id/navigation_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"/>

</android.support.v4.widget.DrawerLayout>